# Odoo-Custom-Addons

./: .gitignore  README.md  odoo.conf  pyproject.toml
custom_addons/library_app/: __manifest__.py
custom_addons/library_app/models/: library_book.py
custom_addons/library_app/security/: ir.model.access.csv  library_security.xml
custom_addons/library_app/tests/: test_book.py
custom_addons/library_app/views/: library_menu.xml
custom_addons/tod_app/: __manifest__.py
custom_addons/tod_app/controllers/: controllers.py
custom_addons/tod_app/demo/: demo.xml
custom_addons/tod_app/models/: models.py
custom_addons/tod_app/security/: ir.model.access.csv
custom_addons/tod_app/views/: views.xml
custom_addons/todo_app/: __manifest__.py
custom_addons/todo_app/controllers/: controllers.py
custom_addons/todo_app/models/: __init__.py  models.py  res_partner_model.py  todo_task_model.py
custom_addons/todo_app/views/: todo_menu.xml  todo_view.xml  views.xml
