[tool.poetry]
name = "general"
version = "0.1.0"
description = "Odoo v14.0 - Generic Purposes"
authors = ["deBarone <amuratha@tuta.io>"]

[tool.poetry.dependencies]
python = "^3.8"
Babel = "2.6.0"
chardet = "3.0.4"
decorator = "4.3.0"
docutils = "0.14"
ebaysdk = "2.1.5"
feedparser = "5.2.1"
freezegun = "0.3.15"
gevent = "20.9.0"
greenlet = "0.4.17"
html2text = "2018.1.9"
idna = "2.6"
Jinja2 = "2.11.2"
libsass = "0.17.0"
lxml = "4.6.1"
Mako = "1.0.7"
MarkupSafe = "1.1.0"
num2words = "0.5.6"
ofxparse = "0.19"
passlib = "1.7.1"
Pillow = "8.1.1"
polib = "1.1.0"
psutil = "5.6.6"
pydot = "1.4.1"
PyPDF2 = "1.26.0"
pyserial = "3.4"
python-dateutil = "2.7.3"
pytz = "2019.1"
pyusb = "1.0.2"
qrcode = "6.1"
reportlab = "3.5.55"
requests = "2.21.0"
zeep = "3.2.0"
python-stdnum = "1.8"
vobject = "0.9.6.1"
Werkzeug = "0.16.1"
XlsxWriter = "1.1.2"
xlwt = "1.3.*"
xlrd = "1.2.0"
odoo-elasticapm = "^0.0.1"
phonenumbers = "^8.12.31"
psycopg2-binary = "^2.9.2"
python-ldap = "^3.3.1"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]
ipython = "^7.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
